# cookiecutter-gopy

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  go.mod  main.go  pyproject.toml  setup.py  setup_ci.py  {{ cookiecutter.project_slug }}_test.go
{{ cookiecutter.project_slug }}/.github/workflows/: build-golang-macos.yaml  lint-on-macos.yaml  lint-on-ubuntu.yaml  publish-test.yaml  publish.yml
{{ cookiecutter.project_slug }}/build-scripts/: uv-make-and-validate-script.sh
